Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -105,30 +105,16 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \section{Introduction}\label{introduction}
 
-In recent years, genetic evidence for the direct contact and interbreeding of modern humans with other hominin populations, such as Neandertals \citep{green_draft_2010,prufer_complete_2013,vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,prufer_high-coverage_2017} and Denisovans \citep{reich_genetic_2010,meyer_high-coverage_2012,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016} was discovered. These admixture events are often used to resolve the timing and duration of biogeographical events by dating them \citep{sankararaman_date_2012,jacobs_multiple_2019,vyas_analyses_2019}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans, when their range overlapped. Archaeological evidence suggest a range overlap between the first modern humans out-of-Africa at  around 188 thousand years ago (kya) \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals around 37 kya \citep{zilhao_precise_2017} and 39 kya \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture is hoped to unveil more evidence of the timing and especially duration of this interaction,
-potentially holding a clue of the debated question of extinction of these hominin populations. Another example is the geographical range distribution of Denisovans that is inferred by admixture proportions and time estimates from present day population and their geographical distribution \citep{jacobs_multiple_2019}. 
 
-The accuracy and information content of admixture dates are dependent on the model used and its assumptions.
-The most widely used admixture model is one where gene flow is constant through time \citep{nielsen_distinguishing_2001,hey_multilocus_2004}, which does not have a time component. However, for dating admixture, it is generally assumed that gene flow
-happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation
-of gene flow. While convenient for inference, one cannot use this approach to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. 
-Here, we are chiefly interested in gene flow between Neandertals and modern humans, which was previously modeled assuming a one-generation pulse of admixture. Dating the duration of the admixture event accurately would inform several questions of  great importance, but not always the same aspect of the admixture is the one of primary interest. For example, if we are interested in dating the out-of-Africa migration of our ancestors, the start of the gene flow between Neandertals and modern humans is of primary interest, as this establishes modern humans and Neandertals in sympatry, likely outside of Africa.
-In contrast, the date of the most recent gene flow between Neandertals and modern humans may be informative for dating the extinction of Neandertals. Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated.
 
-\subsection{Admixture on the genomic level and basic idea how to date
-it}\label{admixture-on-the-genomic-level-and-basic-idea-how-to-date-it}
-To obtain informations about admixture dates from genetic data one uses the length distribution of introgressed segments.
-On the genomic level, admixture introduces  divergent chromosomes from previously isolated populations 
-into the admixed population. Over time, meiotic recombination
-progressively breaks these chromosomes down into introgressed segments, whose size decreases with time \citep{falush_inference_2003}. 
-Assuming that recombination events are
-independent from each other, the length of these segments  is roughly inversely proportional to  the number of
-generations since admixture
-\citep{moorjani_history_2011,pool_inference_2009,gravel_population_2012,liang_lengths_2014}.
-Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments
- can be used to inferred the time since the
-admixture event 
-\citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}.
+\subsection{(Archaic) Interbreeding, genomic consequences and why is it interesting}\label{(Archaic) Interbreeding, genomic consequences and why is it interesting}
+
+In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}. \citep{pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans , i.e. the time between start and end of sympatry of Neandertals and modern humans outside of Africa. This could give a clue to the debated questions of the time of the first modern humans leaving Africa and the extinction of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested around 37 kya inferred by radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017} and 39 kya from radiocarbon dates of Neandertal sites across Europa \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture could unveil more evidence of the timing and especially duration of this interaction. 
+
+\subsection{Admixture models}\label{Admixture models}
+
+The accuracy and information content of admixture date estimates depend on the model used and its assumptions. The most widely used admixture model is the Isolation-Migration model (IM), which models divergence of two populations from an ancestral one by jointly estimating the divergence time and migration rate \citep{nielsen_distinguishing_2001,hey_multilocus_2004}. In the IM model however, migration has no time component and is assumed constant i.e. in our case from the divergence time of Neandertals and modern humans till today. Dates of Admixture events can be estimated by modeling the admixture segment length distribution. For this purpose, most models assume that admixture segments are rare and inbreeding is not significant, such that admixture segments are unlikely to recombine with eachother \citep{pool_inference_2009,liang_lengths_2014}. The segments act neutral \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. In addition, it is generally assumed that the admixture happens over a very short time period, in a single \textit{admixture pulse} \citep{moorjani_history_2011}, usually modelled as a single generation of interbreeding.
 
 
 \subsection{The two approaches and their application to find archaic admixture dates}\label{the-two-approaches-and-their-application-to-find-archaic-admixture-dates}
@@ -136,97 +122,54 @@ admixture event
 The first step in dating admixture events from genetic data is therefore estimating the length distribution of admixture segments.  There are two main approaches for this; a first approach is to use patterns of linkage along a chromosome to estimate the length distribution, without explicitly inferring the genomic location of these segments. In contrast, a second set of methods first aims to identify all admixture segments over a certain length, and then use these segments for inference. 
 (\citep{chimusa_dating_2018}) (Figure \ref{fig:fig1} A).
 
-The first approach uses the admixture-induced linkage disequilibrium
-(ALD) decay. Variants on introgressed archaic segments are
-expected to be in high linkage disequilibrium to each other at the time
-of admixture
-\citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. The extent of linkage between introgressed variants decreases over generations as genetic distance increases. Hence, in case of a recent
-admixture event a few tens of generations ago, ALD stretches  over long genetic distances
-\citep{patterson_methods_2004} and is therefore easily distinguishable
-from short range LD due to other processes \citep{moorjani_history_2011}. For ancient
-admixture events however, ALD is quite similar to the genomic background. To circumvent this issue for dating the Neandertal-human admixture time, an ascertainment scheme was used to calculate LD only for markers that are nearly deferentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus
-\citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of
-genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse
-\citep{moorjani_history_2011,loh_inferring_2013}. Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to
-be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later,
-this date was refined to 40,510--54,454 ya (95\% CI) using a different
-ascertainment scheme combined with a different genetic map
-\citep{moorjani_genetic_2016}. A date was also obtained from an ancient
-genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the
-ancient individual, by the decay of pairwise covariance between
-introgressed SNPs, to the specimens radiocarbon date
-\citep{fu_genome_2014}.
+The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. Variants on introgressed archaic segments are expected to be in high linkage disequilibrium to each other at the time of admixture \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. The extent of linkage between introgressed variants decreases over generations. Hence, in case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances
+\citep{patterson_methods_2004} and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from the ancestral population as well as LD caused by bottlenecks and genetic drift after the split of the populations \citep{moorjani_history_2011,sankararaman_date_2012}. For ancient admixture events however, ALD is quite similar to the genomic background \citep{sankararaman_date_2012}. To circumvent this issue for dating the Neandertal-human admixture time, an ascertainment scheme was used to calculate LD only for markers that are nearly differentially fixed between the two taxa. In this case, the presence of apparent Neandertal alleles in close-range LD is a signature of a locally introgressed locus
+\citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
+introgressed SNPs, to the specimens radiocarbon date \citep{fu_genome_2014}.
 
-A higher amount of Neandertal admixture segments in present-day East-Asians was identified by using the second set of approaches. To explain the higher amount of Neandertal ancestry in these populations a second admixture event was suggested at the same time as the admixture between Neandertals and
-all non-Africans \citep{kim_selection_2015,vernot_complex_2015}.  The identification of segments is largely independent from the later dating, and can be done using a variety of methods.\citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
+The Denisovan modern human admixture time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
+approach on modern day genomes \citep{sankararaman_combined_2016}. 
 
-The Denisovan human
-admixture time point was dated to lie in the interval between 44,000--54,000 ya using the ALD
-approach on modern day genomes \citep{sankararaman_combined_2016}.
-
-Direct identification of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}.
-Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal
-significant differences, suggesting a lack of power to distinguish the
-two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}.
-Analysing genomes from Papuan individuals revealed two time separated
-admixture events with Denisovans, one in line with previous estimates at
-45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
-be around 29.8 kya (95\% CI 14.4-50.4 kya)
-\citep{jacobs_multiple_2019}.
+Using the second set of approaches, archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
+Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the
+two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
+be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}.
 
 
-These studies assumed admixture to be a pulse like event.
-Our goal is to examine the implication that assumption has and when an admixture pulse can be rejected for more general models of continuous admixture (Figure \ref{fig:fig1}).  Using a continuous model, we are interested in establishing the start and end of admixture between Neandertals and modern humans, not just the mean admixture time. This is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we also need to carefully evaluate the potential technical and biological factors and assumptions that may introduce additional biases \citep{pool_inference_2009,gravel_population_2012,liang_lengths_2014}.
-For this purpose, we explore these factors and assumptions influencing the inferred time of admixture pulses, to gauge their relative importance.
+\subsection{Why can't we us the pulse model}\label{Why can't we us the pulse model}
 
+While convenient for inference, one cannot use the admixture pulse model to distinguish an extend period of admixture from an admixture pulse \citep{pickrell_toward_2014}. Here, we are chiefly interested in the duration of the interbreeding between Neandertals and modern humans, especially in the start and end point.  Under an admixture pulse model, which assumes that these two times coincide, hypotheses about the impact of modern human colonization of Eurasia on Neandertal extinction cannot be evaluated. Therefore, we introduce the \textit{extended admixture pulse} model, allowing for multigeneration continuous admixture. 
 
+\subsection{Previous attempts of a general admixture model and ours}\label{Previous attempts of a general admixture model and ours}
 
-\subsection{Assumptions on the data}\label{assumptions-on-the-data}
-
-In general the model assumes that introgressed segments are rare and inbreeding is not significant \citep{pool_inference_2009}. The segments act neutral \citep{shchur_distribution_2019} and the recombination clock is constant over time and populations \citep{gravel_population_2012}. We will adopt these assumptions. Instead we focus on the one-generation pulse and technical assumptions. It is usually assumed that the demography is known or its effects negligible, the recombination map known or recombination is constant. Beside that it is assumed that the ascertainment scheme sufficiently represent the variation in the true introgressing archaic population.
-
-Violations of these assumptions are known to influence the mean time
-estimates. Hence, the effect of assuming a one-generation pulse has to
-be contrasted with other influencing factors, for both a scenario of
-pulse-like and multi-generation continuous admixture. 
-
-
-\subsection{complex migration models}
-
-To relax the one-generation pulse assumption we have to generalize the admixture model.
-The simplest generalization of the admixture pulse model to more complex scenarios is to assume a model with two or more pulses. In such a case,  each segment will have entered in one of the pulses, and the resulting admixture tracts will be a discrete mixture of the constituent distributions \citep{pickrell_ancient_2014}, weighted by the relative migration rates. Zhou et al. 2017 \citep{zhou_modeling_2017} showed that this model, in principle, can be used for continuous mixtures as well, using a polynomial function as a mixture density. However, they found that even for relatively short admixture events, the large number of parameters led to an underestimate of admixture duration \citep{zhou_inference_2017}, and the beginning and end of admixture were not well inferred
+The extended pulse model is a generalization of the simple admixture pulse model. The simplest generalization of this model is to assume two or more discrete pulses. In such a case,  each segment can be thought of having entered in one of the pulses, and the resulting admixture tracts will be a discrete mixture of the constituent distributions \citep{pickrell_ancient_2014}, weighted by the relative migration rates. Zhou et al. 2017 \citep{zhou_modeling_2017} showed that this model, in principle, can be used for continuous mixtures as well, using a polynomial function as a mixture density. However, they found that even for relatively short admixture events, the large number of parameters led to an underestimate of admixture duration \citep{zhou_inference_2017}, and the beginning and end of admixture were not well inferred
 \citep{zhou_modeling_2017,zhou_inference_2017}. 
 
-Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) pulse model. 
+Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) simple pulse model. 
 This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} B & C).
 
+Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
+We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
+
+
+
 \subsection{What we want to do}\label{what-we-want-to-do}
-In our  study, we first examine the  effect of long
-continuous admixture on the admixture time estimates (assuming a pulse-like admixture) in comparison to
-the effects of the aforementioned model assumptions. Second, we define
-the expectation of the resulting segment length distribution for
-continuous Gamma distributed admixture being Lomax distributed, holding
-a parameter for the duration of admixture. This expectation works for
+
+In our study, we first define the new extended admixture pulse model describing the expectation of the resulting segment length distribution for Gamma distributed admixture being Lomax distributed, holding a parameter for the duration of admixture. This model works for
 both methods to infer the segments length, either directly or by using
-the ALD decay. Using this model, we investigate under which scenarios
-the parameters of the Lomax-distribution can be accurately estimated and
-for which parameters we can distinguish a pulse-like admixture event
-from a continuous event. We show that in many cases of ancient admixture, pulses cannot be
-distinguished from more continuous admixture events. Using the 1000 Genomes data, ALD inferred admixture times from Europeans are consistent with a multitude of duration times.
-We conclude that current
-methods are unsuitable to definitively estimate the duration of admixture and thus answer when the contact between
-Neandertals and modern humans started or ended.
+the ALD decay. Second, we examine the effect of ongoing admixture on the admixture time estimates on methods that assume a one generation pulse. Using the extended pulse model, we investigate under which scenarios the parameters of the Lomax-distribution can be accurately estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. We show that in many cases of ancient admixture, pulses cannot be distinguished from more continuous admixture events. Using the 1000 Genomes data, ALD inferred admixture times from Europeans are consistent with a multitude of duration times.
+We conclude that current methods are unsuitable to definitively estimate the duration of admixture and thus answer when the contact between Neandertals and modern humans started or ended.
 
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig1-1.pdf}
-\caption{\label{fig:fig1} A) Neandertal introgression into non-Africans with a multitude of potential admixture durations. The time and duration of admixture results in different length distributions of introgressed chromosomal segments (grey) containing  Neandertal variants (green circles)  in high LD to each other
+\caption{\label{fig:fig1} A) Neandertal introgression into non-Africans with a multitude of potential admixture durations. B) The time and duration of admixture results in different length distributions of introgressed chromosomal segments (grey) containing  Neandertal variants (green circles)  in high LD to each other
 compared to the background . The ALD approach estimates linkage
 between the introgressed variants (green circles), wheres the haplotype approach tries
-to estimate the segment directly (grey area). B) Migration rate per generation
+to estimate the segment directly (grey area). C) Migration rate per generation
 modeled using a Gamma distribution for different admixture durations,
-dotted line indicates maximum time of gene flow. C) The expected LD
-decay modeled as a Lomax distribution for the different length.}
+dotted line indicates maximum time of gene flow. D) The expected LD
+decay under the extended pulse model.}
 \end{figure}
 
 \section{Methods}\label{methods}
@@ -419,7 +362,7 @@ size of the different parameters (Eq.
 \ref{eq:8}). The difference between the estimated
 admixture time and the true admixture time, the error in the estimate,
 was standardized using the true time as the mean. The standardized error in this model is the response to the parameters as model
-predictors. We choose the Normal distribution as the likelihood function being the maximum entropy distribution in our case. The mean of the Normal distribution is then described by a fixed effect size model of the predictors (factors) coded as indicator variables. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN using an R interface \. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (Supplement Table \ref{tab:tableS1}).  
+predictors. We choose the Normal distribution as the likelihood function being the maximum entropy distribution in our case. The mean of the Normal distribution is then described by a fixed effect size model of the predictors (factors) coded as indicator variables. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (S Table \ref{tab:tableS1}).  
 
 \begin{equation}\label{eq:8}
 \begin{split}
@@ -433,13 +376,14 @@ E_i &\sim Normal(\mu_i,\sigma) \\
 
 \subsection{Estimating admixture time from real data}\label{Estimating admixture time from real data}
 
+We apply the extended pulse model on real data to see if we can reject any admixture durations (including a one generation pulse), by comparing the model fit to the data for different duration parameters.
 We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals.  We filtered for all unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only considered biallelic sites. The sites were polarized relative to the Chimpanzee base (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
 
 \section{Results}\label{results}
 
 \subsection{Introduction to result}\label{introduction to result}
 
-We used coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate. Focusing on the ALD approach, the ALDER program was used to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD was fitted with an exponential distribution assuming a one-generation admixture pulse.  We simulated this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) was used to compare all these factors with the effect of multi-generation continuous admixture on the pulse assumption. To get the duration of the admixture we introduce a new fitting approach deploying the Lomax distribution. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD and the direct inference of introgressed segment approaches.
+We used coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate. Focusing on the ALD approach, the ALDER program was used to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD was fitted with an exponential distribution assuming a one-generation admixture pulse.  We simulated this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) was used to compare all these factors with the effect of multi-generation continuous admixture on the pulse assumption. To get the duration of the admixture we introduce a new fitting approach deploying the Lomax distribution. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD.
 
 \subsection{Theoretical framework for continuous admixture}\label{theoretical framework for continuous admixture}
 
