--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -892,7 +892,7 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	number = {7164},
 	urldate = {2020-01-07},
 	journal = {Nature},
-	author = {HapMap, Consortium},
+	author = {{HapMap Consortium}},
 	month = oct,
 	year = {2007},
 	pmid = {17943122},
@@ -1090,7 +1090,7 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	volume = {526},
 	url = {https://doi.org/10.1038/nature15393},
 	journal = {Nature},
-	author = {The 1000 Genomes Project Consortium},
+	author = {{The 1000 Genomes Project Consortium}},
 	month = sep,
 	year = {2015},
 	pages = {68}
@@ -1622,7 +1622,7 @@ A ∼180,000-year-old fossil from Israel provides evidence for early forays of H
 
 @misc{stan_development_team_rstan_2018,
 	title = {{RStan}: the {R} interface to {Stan}},
-	author = {Stan Development Team},
+	author = {{Stan Development Team}},
 	year = {2018}
 }
 
