--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -109,7 +109,7 @@ Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA,
 
 \subsection{(Archaic) Interbreeding, genomic consequences and why is it interesting}\label{(Archaic) Interbreeding, genomic consequences and why is it interesting}
 
-In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_early_2015,fu_genome_2014,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+In recent years, the sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer_high-coverage_2017, mafessoni_high_coverage_2020} and Denisovan genomes \citep{reich_genetic_2010, meyer_high-coverage_2012} revealed that modern humans outside of Africa were in contact and interbred with other hominin populations \citep{vernot_resurrecting_2014,fu_genome_2014,fu_early_2015,sankararaman_genomic_2014,sankararaman_combined_2016,vernot_excavating_2016,malaspinas_genomic_2016}. On a genomic level, the interbreeding with a migrant population (admixture) introduces divergent chromosomes into the mixing population. Over time, meiotic recombination progressively breaks these divergent chromosomes down into admixture segments, whose size decrease with time \citep{falush_inference_2003}. Assuming that recombination events are independent from eachother, the length distribution of the admixture segments is roughly inversely proportional to the number of generations since the interbreeding happened. Hence, using this 'recombination clock', the length distribution of introgressed chromosomal segments can be used to infer the time of an
 admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014}. \citep{pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}. One particular event of interest is the time and duration of interbreeding between Neandertals and modern humans , i.e. the time between start and end of sympatry of Neandertals and modern humans outside of Africa. This could give a clue to the debated questions of the time of the first modern humans leaving Africa and the extinction of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested around 37 kya inferred by radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017} and 39 kya from radiocarbon dates of Neandertal sites across Europa \citep{higham_timing_2014} at the end of the Mousterian. This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. Detailed genetic dating of Neandertal and modern human admixture could unveil more evidence of the timing and especially duration of this interaction. 
 
 \subsection{Admixture models}\label{Admixture models}
@@ -127,10 +127,11 @@ The first approach uses the admixture-induced linkage disequilibrium (ALD) decay
 \citep{sankararaman_date_2012}. Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameters are informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. Using this approach Sankararaman et al. dated the Neandertal-human admixture pulse to be  between 37,000--86,000 ya (years ago) \citep{sankararaman_date_2012}. Later, this date was refined to 40,510--54,454 ya (95\% CI) using a different ascertainment scheme combined with a different genetic map \citep{moorjani_genetic_2016}. A date was also obtained from an ancient genome to be 50,000 - 60,000 ya by adding the time since the admixture obtained from the ancient individual, by the decay of pairwise covariance between
 introgressed SNPs, to the specimens radiocarbon date \citep{fu_genome_2014}.
 
+Using the second set of approaches, a more recent interbreeding event around 37 - 42 kya from an early modern human remain found in Romania with a recent Neandertal ancestor not more than 200 years ago, was found \citep{fu_early_2015}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential distribution.
+
 The Denisovan modern human admixture time point was estimated to lie in the interval between 44,000--54,000 ya using the ALD
 approach on modern day genomes \citep{sankararaman_combined_2016}. 
-
-Using the second set of approaches, archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. The identification of segments is largely independent from the later dating, and can be done using a variety of methods \citep{racimo_signatures_2017,seguin_orlando_paleogenomics_2014,vernot_excavating_2016,sankararaman_combined_2016,skov_detecting_2018}. The length distribution of the obtained fragments is then used to estimate the time of the admixture pulse, typically using an exponential model.
+Direct inference of archaic segments in genomes from present day Southeast-Asians revealed a proportion of previously unknown Denisovan ancestry private to these populations. The segments from this ancestry are more diverged from the high-coverage Denisovan genome then previously found ones. This suggests an additional admixture event from a different population of Denisovans \citep{browning_analysis_2018}. 
 Comparing the mean length of the formerly known and newly identified Denisovan segments did, however, not reveal significant differences, suggesting a lack of power to distinguish the
 two events by time \citep{browning_analysis_2018,jacobs_multiple_2019}. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovans, one in line with previous estimates at 45.7 kya (95\% CI 31.9-60.7 kya) and one exclusive to Papuans dated to
 be around 29.8 kya (95\% CI 14.4-50.4 kya) \citep{jacobs_multiple_2019}.
@@ -205,57 +206,9 @@ generations ago. The migration rate from Neandertals into non-Africans
 was set to zero before the split from Africans, to ensure no Neandertal
 ancestry in Africans. Each simulation was repeated 100 times. 
 
-\subsubsection{Gene Flow}\label{gene flow}
+\subsubsection{Admixture Models}\label{admixture models}
 
-In the admixture pulse model, gene flow is a one generation long pulse,
-resulting in an exponentially distributed segment length or admixture-induced linkage
-disequilibrium (ALD) decay curve (Eq. \ref{eq:1}), with $\lambda$ as
-the rate parameter of the Exponential distribution holding the  time since the admixture event $t$ with $l$, here being either the genetic length of an admixture segment or the genetic
-distance \(d\) between two SNPs,
 
-\begin{equation}
-\begin{split}
-\label{eq:1}
-L_i &\sim exp(\lambda) \\
-\mathbb{E}[l] &= \frac{1}{\lambda} = \frac{1}{t}
-\end{split}
-\end{equation}
-
-Continuous gene flow $m$ over time with the random variable $t \in \{t_1,t_2,...,t_n\}$ was modeled as a Gamma distribution (Eq.
-\ref{eq:2})
-
-\begin{equation}
-\label{eq:2}
-m_i \sim \Gamma(k,\theta)
-\end{equation}
-
-Where k is the shape and \(\theta\) the scale parameter. The parameter
-values are chosen such that the mean length of the
-exponentially distributed segment length or ALD decay curve resulting from the one
-generation admixture pulse, is equal to the mean length as a result of continuous migration with the same total amount of
-migrants, modeled using a Lomax distribution with shape being $k+1$ and the scale $\frac{1}{\theta}$ (Eq. \ref{eq:3})
-
-\begin{equation}
-\begin{split}
-\label{eq:3}
-L_i &\sim Lomax(k+1,\frac{1}{\theta}) \\
-\mathbb{E}[l] &= \frac{1}{\lambda} = \frac{1}{k\theta}
-\end{split}
-\end{equation}
-
-\begin{equation}
-\label{eq:4}
-t_{m}=\mathbb{E}[m] = k \theta
-\end{equation}
-
-\begin{equation*}
-\nonumber
-where \qquad k=t_m \, \frac{1}{\theta} \qquad and \qquad \theta=\frac{1}{t_{m}Var[m]}
-\end{equation*}
-
-Equation (Eq. \ref{eq:4}) shows the relationships between the
-distribution parameters such that the resulting decay mean length are
-equal. Here  $t_{m}$ is the mean time of admixture equal to the mean of the Gamma distribution ($\mathbb{E}[m]$) and $Var[m]=(\frac{t_d}{4})^2$ its variance with $t_d$ as the duration of admixture in generations.
 
 \subsubsection{Recombination map}\label{recombination map}
 
@@ -385,83 +338,22 @@ We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagy
 
 We used coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate. Focusing on the ALD approach, the ALDER program was used to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD was fitted with an exponential distribution assuming a one-generation admixture pulse.  We simulated this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) was used to compare all these factors with the effect of multi-generation continuous admixture on the pulse assumption. To get the duration of the admixture we introduce a new fitting approach deploying the Lomax distribution. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD.
 
-\subsection{Theoretical framework for continuous admixture}\label{theoretical framework for continuous admixture}
-
-First we want to establish the model of continuous admixture and an
-expectation of the segment length distribution under this model in an
-ideal-case from perfect data. For this purpose, we assume that the
-lengths of introgressed segments are perfectly known. In this case, under
-some models, the distribution of introgressed segment lengths \(L_i\) can
-be written as
-
-\begin{equation}
-L_i \sim exp(t)
-\end{equation}
-
-where $t$ is the time when the segments entered the population. The mean segments length will vary  depending on the model assumptions and
-recombination rate \(r\) \citep{liang_lengths_2014}. E.g under the SMC,
-\(L_i = t(1-m)\), and under the SMC' allowing for back coalescence,
-\(L_i = 2N(1-m)(1-exp^{-t/2N})\). For Neandertal admixture where
-\(m\), the admixture fraction, is typically low, the exponential
-assumption is satisfied \citep{liang_lengths_2014}. For scenarios where
-the length of admixture tracts is not exponential, e.g. because
-admixture is recent or very old, our results do not apply.
-
-It is widely assumed that Neandertal ancestry entered the modern human
-population over a very short period (one-generation admixture pulse). As an alternative model describing multi-generation admixture, we need to
-consider \(t\) not as a single point in time, but as a random variable
-itself that follows a mixture distribution \(\mathcal{D}_t\). The most
-widely studied is a small number of discrete ``pulses'' of admixture, in
-which case \(\mathcal{D}_t\) is categorical. Here, we instead assume a
-continuous multi-generation admixture \(\mathcal{D}_t\); more precisely we assume \(\mathcal{D}_t\)
-follows a \(\Gamma(k, \theta)\)-distribution. This has a number of
-advantages:
-
-\begin{itemize}
-    \item We just need two parameter $k$ and $\theta$, that can be interpreted as the duration of gene flow, instead of the minimal of two additional parameters required for the pulse model.
-    \item The segment length distribution $L_i$ follows a Lomax-distribution, i.e. has the analytical density $Pr(L=l) = \frac{1}{\theta k-1} (1+l\frac{1}{\theta})^{-(k-1)}$
-    \item The mean segment-length is  $\frac{1}{k \theta}$ for all $k > 0$, and undefined otherwise. 
-    \item As $k$ approaches infinity, we recover the exponential distribution. Thus, if segment length are directly inferred, one can use a likelihood-ratio test to distinguish continuous from discrete gene flow. As the special case of exponentially lies on the boundary of the parameter space, the test-statistic does not follow a $\chi^2$-distribution \citep{Kozubowski_Testing_2008}. Model selection using a LRT is however not possible when segment length are indirectly inferred by ALD.
-\end{itemize}
-
-Using this model we i) examining the effect of continuous admixture on
-the admixture time estimates calculated using the Exponential model
-assuming a pulse like admixture. ii) comparing this effect to the
-effects by demography, recombination rate and analysis parameters used
-for the indirect inference of admixture segment length using ALD, namely
-the ascertainment scheme and the minimal distance between SNPs. iii) are
-interested under which conditions the parameters of the
-Lomax-distribution can be estimated accurately for a scenario of
-Neandertal admixture and if it is possible to distinguish a pulse-like
-admixture event (resulting in exponentially-distributed ALD)
-from a continuous event (resulting in Lomax-distributed ALD).
 
 \subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
 
 
-To asses the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
-we compared the deviation from the true mean time of admixture for simulations under a one-generation pulse with the one of multi-generation continuous gene flow with the same mean time. We took the scenario of Neandertal admixture into non-Africans simulated using coalescent simulations.
+To assess the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
+we compared the mean average deviation from the true mean time of admixture for simulations under a one-generation pulse with the one of multi-generation continuous gene flow with the same mean time.
 The total amount of gene flow \(m\) from Neandertals into non-Africans
-in the two models is equal. Gene flow is modeled using a Gamma
-distribution (Eq. \ref{eq:2}) holding the migration rate per generation
-for different length of gene flow (Figure \ref{fig:fig1} B).
-The shape and scale parameter of the Gamma distribution are chosen such
+in the two models is equal. 
+The shape and scale parameter of the Gamma distribution modeling the migration rate are chosen such
 that the resulting weighted LD decay curves as functions of genetic
 distance share the same mean for a pulse (Eq. \ref{eq:1}) and a
-continuous admixture (Eq. \ref{eq:3}). Sites informative for Neandertal
-introgression into non-Africans where enriched using the
-Lower-Enrichment Ascertainment scheme (LES) filtering for SNPs ancestral in
-all Africans and polymorphic in Neandertals. The pairwise weighted LD
-between the ascertained SNPs was computed using the ALDER program with a minimal distance between the SNPs of 0.05 cM.
-Figure \ref{fig:fig1} C shows the expected log weighted LD for different
-length of continuous admixture ranging from a one generation pulse to
-1500 generations.
+continuous admixture (Eq. \ref{eq:3}). We used the LES ascertainment scheme and a minimal distance between SNPs of 0.05 cM. 
 
-First, we compared estimates for different mean admixture times ranging
-from 250 generations ago to 2000 generations ago. We either used a
-pulse-like gene flow model where the gene flow is only one generation
-long or a continuous gene flow model for the simulations. The duration
-of gene flow under the continuous model is 50\% of the mean time (if the
+First, we evaluate the effect of the admixture time on the accuracy of both a single pulse and an extended pulse model. The mean admixture times ranges
+from 250 generations ago to 2000 generations ago.  The duration
+of interbreeding under the extended pulse model is 50\% of the mean time (if the
 mean time is 250 generations ago gene flow ranges from 325 to 175
 generations ago). Assuming only a one generation pulse to estimate the
 mean time, revealed only minor deviations between the two scenarios and
@@ -491,7 +383,7 @@ estimates between the two scenarios of \textasciitilde{}120 generations
 in the most extreme case are moderate compared to the mean admixture
 time of 1500 generations.
 
-In conclusion, the differences in mean time estimates between a pulse and a continuous admixture assuming a one-generation pulse are moderate, even for very long continuous admixture scenarios. This makes point estimates for mean admixture time compatible with long continuous admixture.
+In summary, the differences in mean time estimates between a pulse and a continuous admixture assuming a one-generation pulse are moderate, even for very long continuous admixture scenarios. This makes point estimates for mean admixture time compatible with long continuous admixture.
 
 
 \begin{figure}
@@ -507,9 +399,9 @@ flow. Boxplot created from 100 simulation replicates, respectively.}
 \end{figure}
 \subsection{Comparing effect sizes}\label{comparing effect sizes}
 
-Having established that the duration of continuous admixture under ideal
-circumstances is only marginally influential on admixture time
-estimates, we want to compare its effect to more realistic simulation scenarios. Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
+Having shown that the duration of continuous admixture under ideal
+circumstances only marginally influences admixture time
+estimates, we want to compare its effect in more realistic simulation scenarios. Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
 Previous studies reported that violations of these assumptions can have an effect on the admixture time estimates.
 Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (Supp. Fig. \ref{fig:figS1} B), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map (assuming a constant recombination rate).
 Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
@@ -616,34 +508,32 @@ generations of gene flow. D) Duration estimate of the scenario}
 We can also demonstrate this using real data.
 Figure \ref{fig:fig5} (Sup. table \ref{tab:tableS2}) shows multiple gene flow duration scenarios ranging from a one generation pulse to 2500 generations of continuous admixture. All scenarios are compatible with the ALD data from 1000 Genome's CEU computed using YRI and the Altai, Vindija and Chagyrskaya high coverage as reference populations and a CEU specific fine-scale genetic map \citep{spence_inference_2019}.
 
-We repeated the analysis on directly inferred Neandertal segments found in 27,566 high coverage genomes from Iceland \citep{skov_nature_2020} using the deCODE map \citep{kong_fine-scale_2010} as a population specific map for Icelanders (Supplement Figure \ref{fig:figS5} \& Supplement table \ref{tab:tableS3}). However, the mean time estimates of Neandertal admixture obtained are way younger then expected both from previous genetic and archaeological studies. The young mean time estimates (\textasciitilde{}670 generations ago) is causing long continuous admixture (longer then 200 generations ) to be less compatible with the data. We suspect uncertainties in the recombination map paired with the uncertainties in inferring introgressed segments by the HMM to cause this young date (Supplement Figure \ref{fig:figS4}).
 
 
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig5-1.pdf}
 \caption{\label{fig:fig5} Different admixture duration models ranging
-from a one generation pulse to 2500 generations for Neandertal admixture
-duration using all 1k Genome CEU individuals as the admixed population
+from a one generation pulse to 2500 generations of gene flow for Neandertal interbreeding using all 1k Genome CEU individuals as the admixed population
 with all YRI and 3 high coverage Neandertals as reference populations. A) Weighted LD normal scaled B) Weighted LD log scaled.}
 \end{figure}
 
 \section{Discussion}\label{discussion}
 
 How, where and when Neandertals and early modern humans interacted remains contentious.  
-Archaeological evidence bounds the timing of interactions to times when their range overlapped; from the first out-of-Africa migrations of modern humans around 188 k years ago \citep{stringer_when_2018,hershkovitz_earliest_2018} to the extinction of Neandertals around 37 - 39 kya \citep{higham_timing_2014,zilhao_precise_2017}, leaving a time-span of roughly 140ky.
+Archaeological evidence bounds the timing of interactions to times when their range overlapped; from the first out-of-Africa migrations of modern humans around 188 k years ago \citep{stringer_when_2018,hershkovitz_earliest_2018} to the extinction of Neandertals around 37 - 39 kya \citep{higham_timing_2014,zilhao_precise_2017}, leaving a time-span of roughly 140ky in which interbreeding between modern humans outside of Africa and Neandertals might be feasible.
 
-Genetic data has revealed that gene flow between Neandertals and modern humans did occur \citep{green_draft_2010}; and it's mean age is estimated to 47,000–65,000 ya (\citep{sankararaman_date_2012}), assuming the interaction occurred at an instantaneous pulse.
+Genetic data has revealed that gene flow between Neandertals and modern humans did occur \citep{green_draft_2010}; and it's mean age is estimated to 47,000–65,000 ya (\citep{sankararaman_date_2012}), under a single pulse model, but later interbreeding has been documented \citep{fu_early_2015}.
 
-Here, we contrasted this pulse model with scenarios involving more long-standing gene flow.  Our model, assumes that migration rates  follow a Gamma distribution, which results in an simple closed-form expression for the introgressed segment lengths or ALD  distributions. 
+Here, we contrasted this pulse model with scenarios involving more long-standing gene flow.  Our model, assumes that migration rates  follow a Gamma distribution, which results in a simple closed-form expression for the introgressed segment lengths or ALD  distributions. 
 
-In our analyses using the extended model, we find that most methods focus on the mean time of gene flow, and are mostly accurate in its inference. However, we also show that even gene flow lasting thousands of generations may yield data that are practically indistinguishable from a pulse, and that other modelling and method assumptions have an impact on estimates that are of a similar magnitude or much higher. Particularly the assumption of a constant recombination rate will lead to sever underestimations of admixture times, therefore reliable mean time estimates can only be obtained using population specific recombination maps.
+In our analyses using the extended model, we find that mean admixture time estimates vary little between models. However, we also show that even gene flow lasting thousands of generations may yield data that are practically indistinguishable from a pulse, and that other modelling and method assumptions have an impact on estimates that are of a similar magnitude or much higher. Particularly assumptions on the recombination rate are highly impactfull, and will lead to sever underestimations of admixture times. Therefore reliable mean time estimates can only be obtained using population specific recombination maps.
 
-The major implication of our result is that one has to be extremely cautious when interpreting results of genetic dating; the data are entirely consistent with gene flow occurring both earlier and later than the confidence intervals of the mean gene flow timing might indicate. This is of great practical importance as it might be tempting to link the genetic admixture date estimates with biogeographical events \citep{sankararaman_date_2012,lazaridis_genomic_2016,jacobs_multiple_2019,vyas_analyses_2019,douka_age_2019}. For example, the lower bounds on admixture time estimates might be used as dates of Neandertal extinction, and likewise use the earliest dates of gene flow as evidence when the out-of-Africa migration happened \citep{sankararaman_date_2012}. Our results show that both of these interpretations might be misleading.
+The major implication of our result is that interpreting results of genetic dating is difficult.  Estimating the mean time of gene flow and its confidence intervals are not indicative of the actual duration of the interbreeding.  This is of great practical importance as it might be tempting to link the genetic admixture date estimates with biogeographical events \citep{sankararaman_date_2012,lazaridis_genomic_2016,jacobs_multiple_2019,vyas_analyses_2019,douka_age_2019}. For example, the lower bounds on admixture time estimates might be used as dates of Neandertal extinction, and likewise use the earliest dates of gene flow as evidence when the out-of-Africa migration happened \citep{sankararaman_date_2012}. Our results show that both of these interpretations might be misleading. However, using the extended pulse model relaxing the one generation pulse assumptions used for earlier estimates, also indicates that most of the gene flow was around 45,000 to 65,000 years ago, consistent with previous estimates.
 
 
 While our results show that drawing concrete conclusions from admixture time estimates can be misleading, other avenues for differentiating different gene flow events remain fruitful.
-In particular, measures based on population differentiation (e.g \citep{browning_analysis_2018,wall_higher_2013,villanea_multiple_2019,jacobs_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. 
+In particular, measures based on population differentiation (e.g \citep{browning_analysis_2018,wall_higher_2013,villanea_multiple_2019}) are very promising to understand the different events that contributed to archaic ancestry in present-day humans. 
 
 The other major avenue are ancient DNA samples from early modern humans that lived around or immediately after gene flow between archaic and modern humans occurred. The \textit{Oase 1} \citep{fu_genome_2014} genome is a prime example, as it directly demonstrates that some gene flow must have occurred in Europe, around 40,000 years ago, concurrently with when \textit{Oase 1} lived. More generally, detailed analyses of ancient genomes from the initial upper paleolithic should provide more accurate mean dates, as they are much closer to the gene flow, and may give better evidence about the duration of the gene flow. The drawback is that some of the gene flow these individuals experience may be private to their population, as has e.g. been suggested for \textit{Oase 1}. Larger numbers of early modern human genomes, as well as methods to accurately infer admixture tracts or ALD in low-coverage data will likely enable this line of research. 
 
@@ -774,49 +664,6 @@ Lomax (td=2500) & c & -6.57497391994452e-07 & -5.0302627605347e-06 & 3.715267976
 \end{tabular}
 \end{table}
 
-\begin{figure}
-\centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS4-1.pdf}
-\caption{\label{fig:figS4} Mean admixture time estimates from true and directly inferred Neandertal segments from 100 simulated haploid Icelandic genomes under different recombination parameter and different lower cutoffs. Upper cutoff is set to 1.2 cM A) Pulse-like admixture 1500 generations ago fitted using an Exponential PDF. B) Same simulation fitted using a Lomax PDF C) 1000 generation of continuous admixture with a mean time of 1500 generations ago fitted using an Exponential PDF. D) Same simulation fitted using a Lomax PDF.}
-\end{figure}
 
-\begin{figure}
-\centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS5-1.pdf}
-\caption{\label{fig:figS5} Different admixure duration models ranging
-from a one generation pulse to 2500 generations for Neandertal admixture
-using directly infered introgressed segments from Skov et al. 2020}
-\end{figure}
-
-\begin{table}[H]
-\caption{\label{tab:tableS3}\label{tab:tableS3} Mean and 2.5/97.5 compatibility interval and likelihood for the mean time  estimated from segments identified in the Icelandic data set }
-
-\centering
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Model & Parameter & Estimate & 2.5 \% & 97.5 \% & Likelihood\\
-\hline
-Exponential & mean time & 669 & 665 & 674 & 86434.7\\
-\hline
-Lomax (td=1) & mean time & 669 & 665 & 674 & 86434.7\\
-\hline
-Lomax (td=100) & mean time & 670 & 666 & 675 & 86434.5\\
-\hline
-Lomax (td=200) & mean time & 674 & 670 & 678 & 86433.2\\
-\hline
-Lomax (td=400) & mean time & 688 & 683 & 692 & 86416.1\\
-\hline
-Lomax (td=800) & mean time & 742 & 737 & 746 & 86200.5\\
-\hline
-Lomax (td=1000) & mean time & 781 & 776 & 786 & 85934.2\\
-\hline
-Lomax (td=1500) & mean time & 914 & 908 & 920 & 84714.6\\
-\hline
-Lomax (td=2000) & mean time & 1104 & 1097 & 1111 & 82908.2\\
-\hline
-Lomax (td=2500) & mean time & 1382 & 1374 & 1391 & 80914.9\\
-\hline
-\end{tabular}
-\end{table}
 
 \end{document}
